# FlappyBird

./: CMakeLists.txt
include/: Bird.h  Game.h  Pipe.h
src/: Bird.cpp  Game.cpp  Pipe.cpp  main.cpp
